Page class 생성 및 상속

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <nav>
       <a href="/" data-link>Home</a>
       <a href="/detail" data-link>Detail</a>
+      <a href="/home" data-link>Home</a>
     </nav>
 
     <div id="app"></div>
