소소한 버튼 CSS 적용

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <title>withmylover</title>
+    <link rel="stylesheet" href="/public/styles/style.css" />
   </head>
   <body>
-    <nav>
-    </nav>
+    <nav></nav>
 
-    <div id="app"></div>
+    <div id="app" class="vertical-page"></div>
 
     <script type="module" src="/src/main.ts"></script>
   </body>
