header 컴포넌트 추가, css 수정

--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <title>withmylover</title>
+    <link
+      rel="stylesheet"
+      as="style"
+      crossorigin
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
+    />
     <link rel="stylesheet" href="/public/styles/style.css" />
   </head>
   <body>
     <nav></nav>
 
-    <div id="app" class="vertical-page"></div>
+    <div id="app"></div>
 
     <script type="module" src="/src/main.ts"></script>
   </body>
