meta 태그, robots.txt 추가

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
       name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
+    <meta
+      name="description"
+      content="사진을 선택하고 프레임을 합성해 나만의 포토카드를 온라인에서 무료로 만들어보세요!"
+    />
+    <meta property="og:title" content="온라인 포토카드 만들기" />
+    <meta
+      property="og:description"
+      content="사진으로 나만의 포토카드를 만들어요."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://withmylover.vercel.app/" />
+    <link rel="canonical" href="https://withmylover.vercel.app/" />
     <title>withmylover</title>
     <link
       rel="stylesheet"
